--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@ body {
 #app-container {
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 #header {
@@ -66,4 +67,5 @@ body {
 
 canvas {
   background-color: #3e3e3e;
+  display: block;
 }
