Add messages style and examples
Signed-off-by: José Lucas Silva Mayer <josemayer@usp.br>

--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,26 @@ body {
 #content #main {
   flex-grow: 1;
   background-color: #ddd;
+  display: flex;
+  align-items: stretch;
+  background-color: #3e3e3e;
+  color: #fff;
+}
+
+#content #main #messages {
+  flex-grow: 1;
+}
+
+#content #main #messages ul {
+  list-style: none;
+  padding: 0;
+  margin: 15px 0;
+  font-size: 16px;
+}
+
+#content #main #messages ul li {
+  padding: 5px 10px;
+  border-left: 5px solid #fff;
 }
 
 .branch {
@@ -62,6 +82,5 @@ body {
 }
 
 canvas {
-  background-color: #3e3e3e;
   display: block;
 }
