--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@ body {
   height: 50px;
   padding: 0 20px;
   border-bottom: none;
+  cursor: pointer;
 }
 
 #content #sidebar .dropdown .header.opened {
