--- a/src/style.css
+++ b/src/style.css
@@ -93,7 +93,7 @@ body {
 
 #content #main {
   flex-grow: 1;
-  background-color: #ddd;
+  position: relative;
   display: flex;
   align-items: stretch;
   background-color: #3e3e3e;
@@ -153,6 +153,53 @@ body {
 
 canvas {
   display: block;
+}
+
+#repoSelectorLoading {
+  display: none;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.5);
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes jump {
+  25% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-0.5em);
+  }
+  75% {
+    transform: translateY(0);
+  }
+}
+
+.loading {
+  display: inline-flex;
+  height: 1rem;
+  width: min-content;
+  align-items: flex-end;
+  scale: 2;
+}
+
+.loading span {
+  width: 0.5em;
+  height: 0.5em;
+  background: #333;
+  border-radius: 50%;
+  margin: 0 0.1em;
+  animation: jump 1500ms infinite;
+}
+
+.loading span:nth-child(2) {
+  animation-delay: 250ms;
+}
+
+.loading span:nth-child(3) {
+  animation-delay: 500ms;
 }
 
 #actions {
