--- a/src/style.css
+++ b/src/style.css
@@ -165,6 +165,30 @@ canvas {
   align-items: center;
 }
 
+#repoSelector {
+  display: none;
+}
+
+#repoSelectorButton {
+  display: flex;
+  gap: 8px;
+  color: black;
+  cursor: pointer;
+  font-size: 16px;
+  align-items: center;
+  margin: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #ff9888;
+  border: none;
+  transition: all 0.3s;
+}
+
+#repoSelectorButton:hover {
+  background-color: #ff6655;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 @keyframes jump {
   25% {
     transform: translateY(0);
