--- a/src/screens/Home/home.css
+++ b/src/screens/Home/home.css
@@ -43,6 +43,8 @@ body {
       width: 95%;
       background: transparent;
       border: none;
+      cursor: pointer;
+      transition: all 0.6s;
     }
     & .selected {
       border-radius: 10px;
@@ -107,6 +109,7 @@ button span {
     border-radius: 20px;
     padding: 20px 40px;
     border: none;
+    cursor: pointer;
 
     & span {
       color: #fff;
@@ -159,13 +162,34 @@ button span {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
     & td {
       max-width: 600px;
       min-width: 300px;
       color: rgba(255, 255, 255, 0.6);
       display: flex;
       flex-grow: 1;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+
+      & input {
+        font-size: 16px;
+        background-color: transparent;
+        color: white;
+        height: 20px;
+        text-align: center;
+      }
+
+      & input:not([disabled]):hover {
+        cursor: pointer;
+        border: inset black;
+      }
+
+      & input[disabled] {
+        cursor: not-allowed;
+        border: none;
+        color: rgba(255, 255, 255, 0.6);
+      }
     }
     & td:first-child {
       max-width: 100px;
@@ -173,6 +197,16 @@ button span {
       display: flex;
       margin-left: 0;
       justify-content: center;
+
+      & img {
+        height: 25px;
+        width: 25px;
+        cursor: pointer;
+      }
+    }
+    & .bold {
+      color: #fff;
+      font-weight: bold;
     }
   }
 
@@ -180,6 +214,10 @@ button span {
     border: 1px solid #fff;
     padding: 5px;
     border-radius: 12px;
+  }
+
+  & .diretory {
+    color: rgba(255, 255, 255, 0.3);
   }
 }
 
