--- a/src/screens/Home/Tabs/shortcutsStyles.css
+++ b/src/screens/Home/Tabs/shortcutsStyles.css
@@ -1,20 +1,3 @@
-.keybind {
-  margin-top: 20px;
-  position: fixed;
-}
-.keybind span {
-  border: 1px solid #fff;
-  padding: 5px;
-  border-radius: 12px;
-}
-
-.keybind-container {
-  & input {
-    height: 50px;
-    z-index: 1;
-  }
-}
-
 input {
   font-size: 16px;
   background-color: transparent;
@@ -33,8 +16,12 @@ input[disabled] {
   border: none;
   color: rgba(255, 255, 255, 0.6);
 }
+#descriptionShortcuts {
+  padding-left: 200px;
+  padding-right: 225px;
+}
 #shortcutsTable {
-  padding: 0 150px;
+  padding: 0 200px;
   & tr {
     font-size: 16px;
     display: flex;
@@ -42,19 +29,48 @@ input[disabled] {
     align-items: center;
     padding: 30px 0;
 
-    & td {
-      max-width: 600px;
-      min-width: 5px;
+    & .command,
+    .keybind-container {
       color: rgba(255, 255, 255, 0.6);
       display: flex;
       flex-grow: 1;
       flex-direction: column;
       align-items: center;
     }
+    .command {
+      max-width: 700px;
+      min-width: 300px;
+    }
+    .keybind-container {
+      align-items: center;
+      max-width: 550px;
+      min-width: 200px;
+      justify-content: center;
+      position: relative;
+      & input {
+        height: 50px;
+        z-index: 1;
+      }
+    }
+
+    .keybind {
+      margin-top: 20px;
+      position: absolute;
+      align-items: center;
+      justify-content: center;
+      top: 20%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      & span {
+        border: 1px solid #fff;
+        padding: 5px;
+        border-radius: 12px;
+      }
+    }
     & td:first-child {
-      background-color: pink;
       max-width: 100px;
-      min-width: 50px;
+      min-width: 100px;
       display: flex;
       margin-left: 0;
       justify-content: center;
@@ -64,10 +80,6 @@ input[disabled] {
         width: 25px;
         cursor: pointer;
       }
-    }
-    & .bold {
-      color: #fff;
-      font-weight: bold;
     }
   }
 }
