--- a/src/screens/Home/home.css
+++ b/src/screens/Home/home.css
@@ -30,7 +30,7 @@ body {
   flex-grow: 1;
 
   & #sidebar {
-    width: 301px;
+    min-width: 300px;
     background-color: #d9d9d9;
 
     & button {
