adding search shortcuts searchbar, add and commit button img and shortcuts just when window focused

--- a/src/style.css
+++ b/src/style.css
@@ -271,3 +271,11 @@ canvas {
 #popButton {
   background-image: url(./assets/pop-button.svg);
 }
+
+#addButton {
+  background-image: url(./assets/add-button.svg);
+}
+
+#commitButton {
+  background-image: url(./assets/commit-button.svg);
+}
