--- a/src/screens/Home/Tabs/Shortcuts/shortcutsStyles.css
+++ b/src/screens/Home/Tabs/Shortcuts/shortcutsStyles.css
@@ -1,3 +1,22 @@
+#searchInput {
+  border-radius: 10px;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  height: 40px;
+}
+
+#search-icon {
+  background-color: pink;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+}
+
+.search-container {
+  position: relative;
+  display: inline-block;
+}
 input {
   font-size: 16px;
   background-color: transparent;
@@ -44,7 +63,7 @@ input[disabled] {
     .keybind-container {
       align-items: center;
       max-width: 550px;
-      min-width: 200px;
+      min-width: 300px;
       justify-content: center;
       position: relative;
       & input {
