--- a/src/screens/Repository/style.css
+++ b/src/screens/Repository/style.css
@@ -1,14 +1,3 @@
-body {
-  margin: 0;
-  font-family: "Inter", sans-serif;
-}
-
-#app-container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
 #header {
   display: flex;
   flex-direction: column;
@@ -18,11 +7,6 @@ body {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-}
-
-#header #navigation {
-  height: 72px;
-  background-color: #d9d9d9;
 }
 
 #header #actions {
@@ -92,8 +76,9 @@ body {
   margin-right: 10px;
 }
 
-#content #main {
+#content #repositoryMain {
   flex-grow: 1;
+  flex-direction: row;
   position: relative;
   display: flex;
   align-items: stretch;
@@ -101,26 +86,26 @@ body {
   color: #fff;
 }
 
-#content #main #messages {
+#content #repositoryMain #messages {
   flex-grow: 1;
 }
 
-#content #main #messages {
+#content #repositoryMain #messages {
   list-style: none;
   padding: 0;
   margin: 13px 20px;
 }
 
-#content #main #messages .message {
+#content #repositoryMain #messages .message {
   font-size: 14px;
 }
 
-#content #main #messages .author {
+#content #repositoryMain #messages .author {
   font-size: 12px;
   color: #999;
 }
 
-#content #main #messages li {
+#content #repositoryMain #messages li {
   margin: 4px 0;
   height: 26px;
   border-left: 5px solid #fff;
@@ -265,41 +250,41 @@ canvas {
 
 /* Individual button styles */
 #pushButton {
-  background-image: url(./assets/push-button.svg);
+  background-image: url(../../assets/push-button.svg);
 }
 
 #pullButton {
-  background-image: url(./assets/pull-button.svg);
+  background-image: url(../../assets/pull-button.svg);
 }
 
 #mergeButton {
-  background-image: url(./assets/merge-button.svg);
+  background-image: url(../../assets/merge-button.svg);
 }
 
 #undoButton {
-  background-image: url(./assets/undo-button.svg);
+  background-image: url(../../assets/undo-button.svg);
 }
 
 #redoButton {
-  background-image: url(./assets/redo-button.svg);
+  background-image: url(../../assets/redo-button.svg);
 }
 
 #branchButton {
-  background-image: url(./assets/branch-button.svg);
+  background-image: url(../../assets/branch-button.svg);
 }
 
 #stashButton {
-  background-image: url(./assets/stash-button.svg);
+  background-image: url(../../assets/stash-button.svg);
 }
 
 #popButton {
-  background-image: url(./assets/pop-button.svg);
+  background-image: url(../../assets/pop-button.svg);
 }
 
 #addButton {
-  background-image: url(./assets/add-button.svg);
+  background-image: url(../../assets/add-button.svg);
 }
 
 #commitButton {
-  background-image: url(./assets/commit-button.svg);
+  background-image: url(../../assets/commit-button.svg);
 }
